# ffs

./: Cargo.toml  ROADMAP.md
src/: config.rs  engine.rs  lib.rs  main.rs  scripting.rs  types.rs  ui.rs  utils.rs
src/rules/: cargo.rs  cd.rs  cd_tests.rs  generic.rs  git.rs  git_tests.rs  grep.rs  grep_tests.rs  mkdir.rs  mkdir_tests.rs  mod.rs  python.rs  python_tests.rs  sudo.rs  sudo_tests.rs
src/shells/: bash.rs  fish.rs  mod.rs  zsh.rs
