[package]
name = "ffs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.12.0"
dirs = "6.0.0"
once_cell = "1.21.3"
regex = "1.12.2"
rhai = { version = "1.23.6", features = ["sync"] }
serde = { version = "1.0.228", features = ["derive"] }
shell-escape = "0.1.5"
shell-words = "1.1.1"
strsim = "0.11.1"
toml = "0.9.10"
which = "8.0.0"

[lib]
name = "ffs"
path = "src/lib.rs"

[[bin]]
name = "ffs"
path = "src/main.rs"
